--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <style>
+     .myDiv {
+      border: 5px outset rgb(0, 81, 255);
+      background-color: rgb(215, 245, 255);
+      text-align: center;
+    }
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All About Java Application</title>
+    <title>All About Battery</title>
+</style>
 </head>
 <body>
-<h1>Battery Saving Mode is Enable</h1>
-<p1><b>Your Battery is About to Die</b></p1>
-<p2>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Maiores, praesentium itaque asperiores alias dignissimos eveniet delectus unde modi accusantium velit quaerat laborum animi tempora quia quas vero ipsam nemo perferendis.</p2>
-<br>
-<p3>Dorem ipsspowum dolor sit amet consectetur hello world elit. Fugit blanditiis deserunt recusandae rerum labore laboriosam consequuntur aliquam distinctio, itaque eius nostrum. Repudiandae voluptatibus dignissimos doloremque molestias pariatur unde, eius natus!</p3>
-<br>
-<p4>Dorem ipsun dolor sit amet consectetur KSSKxsojsccjso cndsos elit. Optio ullam maiores ipsa facere quo ipsum totam aut odit voluptates? Delectus nihil rem ab ullam. Sunt atque itaque iste debitis fugiat!</p4>
-<br>
-<p5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quod accusamus omnis facere modi, esse eum vitae dolores soluta quaerat temporibus voluptatibus iure odio magni, saepe unde! Soluta, nobis incidunt.</p5>
-<br>
-<h2>Some Instructions</h2>
-<p6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias hic facere exercitationem totam, perferendis libero voluptatum sint, inventore ipsa dolore optio reiciendis, harum ratione assumenda tempore quidem nesciunt iste repellendus.</p6>
-<br>
-<p7>Lorem ipsum dolor sit, amet consectetur adipisicing elit.Explicabo recusandae totam nihil, accusantium minima corrupti fugit facilis? Quaerat, soluta temporibus, consectetur aut quo fugiat repellat id ipsum officiis voluptate</p7>
+    <div class="myDiv">
+    <h1>Battery Saving Mode is Enable</h1>
+    <p><b>Your Battery is About to Die</b></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Maiores, praesentium itaque asperiores alias dignissimos eveniet delectus unde modi accusantium velit quaerat laborum animi tempora quia quas vero ipsam nemo perferendis.</p>
+    <br>
+    
+    <!-- Give the comment using ctrl+/ -->
+    <!-- You are good to fit in this job role -->
 
+<h2><b></b><i>Some Instructions</i></h2>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias hic facere exercitationem totam, perferendis libero voluptatum sint, inventore ipsa dolore optio reiciendis, harum ratione assumenda tempore quidem nesciunt iste repellendus.</p>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.Explicabo recusandae totam nihil, accusantium minima corrupti fugit facilis? Quaerat, soluta temporibus, consectetur aut quo fugiat repellat id ipsum officiis voluptate</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum magnam odit itaque illo similique cupiditate, dolore vitae tenetur temporibus eos minima, eaque beatae, ratione fugiat fuga. Totam, aliquam dolore! Laboriosam fugit praesentium, architecto in obcaecati id nihil illo quis maiores atque ipsam ipsum officiis iure aut quam nobis at natus, voluptate odio? Blanditiis, facilis? Officiis nostrum atque quisquam labore voluptatum ipsum sed, doloremque enim animi ducimus obcaecati neque! Tenetur, illo minima? Culpa saepe consectetur, esse est cum reprehenderit beatae. Accusamus, officiis esse perspiciatis sunt quas autem a dignissimos fugiat dolores rem? Quis quod aspernatur corrupti sint vero nemo maiores? Distinctio nobis similique dolorem veniam molestias nihil a, odio assumenda adipisci laudantium illum quis! Aut velit cumque sed modi, possimus omnis quo laudantium dolores numquam voluptatum similique, quos consectetur quas deleniti dolorem cupiditate blanditiis reiciendis mollitia, accusamus excepturi ullam? Laudantium dolorum enim nesciunt ab cum? Modi, voluptate. Sapiente amet nemo laudantium iure repudiandae sint eveniet ut mollitia perferendis tempore dolorum, ex voluptas quia? Praesentium doloremque eveniet modi omnis architecto nemo debitis. Natus eaque tempore suscipit quisquam temporibus eius, architecto deserunt non mollitia est expedita, ipsam repudiandae facere a officia totam? Laborum facere non id ducimus suscipit quas dolorum sapiente! Quis maxime dolor dolorem, aliquid quos magni explicabo magnam architecto corporis eum. Obcaecati itaque saepe magni tenetur doloribus hic, porro cupiditate, accusamus, dignissimos voluptas ratione cumque autem optio ipsum dolor fugiat esse laudantium laborum necessitatibus dolorum temporibus quod perspiciatis ducimus eum. Nemo distinctio accusamus ipsa quaerat neque, odit eius odio laudantium deserunt similique error saepe fugiat quod possimus ratione est atque illum sunt culpa placeat laborum obcaecati id! Maiores earum corrupti minima. Voluptatem sint quasi mollitia quidem rerum exercitationem doloribus natus rem, quibusdam ipsum molestias animi iure! Placeat labore ea amet? Ad alias natus pariatur magni magnam inventore laudantium ratione, quaerat cumque?</p>
+
+</div>
 </body>
 </html>
